"Created Controller, modified app to ask which statistics show"

--- a/webapp/templates/task.html
+++ b/webapp/templates/task.html
@@ -12,6 +12,11 @@
                 <option value = 'Москва'>Москва</option>
                 <option value = 'Санкт-Петербург'>Санкт-Петербург</option>
             </select>
+            <select name = 'option' required>
+                <option value = 'Случаев заражения'>Статистика по количеству заражений в день</option>
+                <option value = 'Умерло'>Статистика по количеству погибших в день</option>
+                <option value = 'Выздоровело'>Статистика по количеству выздоровевших</option>
+            </select>
         </p>
     	<p>
             <input type="submit">
